--- a/src/styles/Tasks.css
+++ b/src/styles/Tasks.css
@@ -75,8 +75,11 @@
 
 .Task-checkbox {
   box-sizing: border-box;
-  width: 1.25rem;
-  height: 1.25rem;
+  max-width: 1.25rem;
+  max-height: 1.25rem;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1;
   border-radius: 50%;
   border: 3px solid var(--bgLayerColor);
   background-color: var(--bgLayerColor);
